--- a/flux/base/instavote-repository.yaml
+++ b/flux/base/instavote-repository.yaml
@@ -11,4 +11,4 @@ spec:
   timeout: 1m0s
   secretRef:
     name: github-instavote
-  url: https://github.com/AlexLek/instavote.git
+  url: https://github.com/AlexLek/instavote-deploy.git
