--- a/flux/base/vote-imageupdateautomation.yaml
+++ b/flux/base/vote-imageupdateautomation.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     reconcile.fluxcd.io/requestedAt: "2025-09-26T22:19:54.256385342Z"
   name: instavote-all
-  namespace: flux-system
+  namespace: instavote
 spec:
   git:
     checkout:
